--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ claxon = { version = "0.4.2", optional = true }
 hound = { version = "3.3.1", optional = true }
 lewton = { version = "0.10", optional = true }
 minimp3_fixed = { version = "0.5.4", optional = true }
-symphonia = { version = "0.5.4", optional = true, default-features = false }
+#symphonia = { version = "0.5.4", optional = true, default-features = false }
+symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6" }
 crossbeam-channel = { version = "0.5.8", optional = true }
 
 rand = { version = "0.9.0", features = ["small_rng", "os_rng"], optional = true }
