--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ claxon = { version = "0.4.2", optional = true }
 hound = { version = "3.3.1", optional = true }
 lewton = { version = "0.10", optional = true }
 minimp3_fixed = { version = "0.5.4", optional = true}
-symphonia = { version = "0.5.4", optional = true, default-features = false }
+#symphonia = { version = "0.5.4", optional = true, default-features = false }
+symphonia = { git = "https://github.com/skoky/Symphonia.git" }
 crossbeam-channel = { version = "0.5.8", optional = true }
 
 rand = { version = "0.8.5", features = ["small_rng"], optional = true }
